se realizo los CU7, CU8, CU9, CU10 integrados
