# app/Models/Room.php
@@ -1,0 +1,12 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Room extends Model
+{
+    protected $table = 'rooms';
+
+    protected $fillable = ['name', 'capacity', 'location', 'resources'];
+}
